<resources>
    <string name="app_name">Timetable for HSE PE</string>
    <string name="hse_logo">HSE logo image</string>
    <string name="student_timetable">РАСПИСАНИЕ ДЛЯ СТУДЕНТОВ</string>
    <string name="teacher_timetable">РАСПИСАНИЕ ДЛЯ ПРЕПОДАВАТЕЛЯ</string>
    <string name="day_timetable">РАСПИСАНИЕ\n НА ДЕНЬ</string>
    <string name="week_timetable">РАСПИCАНИЕ\n НА НЕДЕЛЮ</string>
    <string name="teacher">Преподаватель</string>
    <string name="building">Корпус</string>
    <string name="office">Кабинет</string>
    <string name="subject">Дисциплина</string>
    <string name="status">Нет пары</string>
    <string name="current_time_is">Сейчас:&#160;</string>
    <string name="time">Время</string>
    <string name="teacher_selection">Выберите преподавателя:</string>
    <string name="group_selection">Выберите группу:</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="available_sensors">Доступные датчики:</string>
    <string name="current_illumination">Текущая освещённость:</string>
    <string name="enter_your_name">Укажите ваше имя</string>
    <string name="take_photo">Сделать фото</string>
    <string name="specity_photo">Укажите фото:</string>
    <string name="no_light_sensor">Не найдено сенсора освещённости</string>
    <string name="lecture_type">ПРАКТИЧЕСКОЕ ЗАНЯТИЕ</string>
    <string name="lecture_name">Анализ данных (анг)</string>
    <string name="place">Ауд. 432, Бульвар Гагарина, 37</string>
    <string name="teacher_name">О.В.Валяхина</string>
    <string name="title">Расписание</string>
    <string name="no_classes">Нет пар</string>
    <string name="class_going">Идёт пара</string>
</resources>