<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.TeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_selection"
            style="@style/CustomTextStyle"
            android:layout_marginVertical="3dp"/>
        <Spinner
            android:id="@+id/groupList"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginVertical="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_time_is"
                style="@style/CustomTextStyle"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginVertical="3dp"/>

        <LinearLayout
            android:id="@+id/subject_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="3dp">
            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"/>
            <TextView
                android:id="@+id/office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/office"/>
            <TextView
                android:id="@+id/building"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/building"/>
            <TextView
                android:id="@+id/teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:baselineAligned="true">
            <Button
                android:id="@+id/button_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/day_timetable"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/week_timetable"
                android:layout_marginStart="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>