<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/specity_photo"
                style="@style/CustomTextStyle"/>
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/blank_profile"
                android:contentDescription="Profile photo"
                android:layout_marginVertical="10dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <Button
                android:id="@+id/button_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/take_photo"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_illumination"
                style="@style/CustomTextStyle"/>
            <TextView
                android:id="@+id/text_light_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_sensors"
                style="@style/CustomTextStyle"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/permissions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"/>
</LinearLayout>

