<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/hse_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_hse"
        android:contentDescription="@string/hse_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_student"
        android:layout_marginVertical="10dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintVertical_bias="0.2"
        />


    <Button
        android:id="@+id/button_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_timetable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_teacher"
        android:layout_marginBottom="10dp"
        android:textSize="13sp"
        />

    <Button
        android:id="@+id/button_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_timetable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        android:layout_marginBottom="10dp"
        android:textSize="13sp"
        />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:textSize="13sp"
        android:backgroundTint="?colorPrimaryVariant"
        />

</androidx.constraintlayout.widget.ConstraintLayout>